Creating manifest.json

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       color: red;
     }
   </style>
-  <link rel="stylesheet" href="./css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/bootstrap.min.css">
 </head>
 
 <body>
@@ -50,8 +50,8 @@
       </div>
     </div>
   </div>
-  <script src="./js/vue.min.js"></script>
-  <script src="./js/script.js"></script>
+  <script src="js/vue.min.js"></script>
+  <script src="js/script.js"></script>
 </body>
 
 </html>
